/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

 syntax = "proto3";

 option go_package = "github.com/ukama/ukama/systems/common/pb/gen/ukama";
 
 package ukama.common.v1;

 enum NotificationType {
    TYPE_INVALID              = 0;
	TYPE_INFO                 = 1;
	TYPE_WARNING              = 2;
	TYPE_ERROR                = 3;
	TYPE_CRITICAL             = 4;
	TYPE_ACTIONABLE_INFO      = 5;
	TYPE_ACTIONABLE_WARNING   = 6;
	TYPE_ACTIONABLE_ERROR     = 7;
	TYPE_ACTIONABLE_CRITICAL  = 8;
}

enum NotificationScope {
    SCOPE_INVALID = 0;
    SCOPE_OWNER = 1;
    SCOPE_ORG = 2;
    SCOPE_NETWORKS = 3;
	SCOPE_NETWORK = 4;
    SCOPE_SITES = 5;
	SCOPE_SITE = 6;
    SCOPE_SUBSCRIBERS = 7;
	SCOPE_SUBSCRIBER = 8;
    SCOPE_USERS = 9;
	SCOPE_USER = 10;
	SCOPE_NODE = 11;
}